Working now! missing exception treatmentwq

--- a/views/synchronizerd.ui
+++ b/views/synchronizerd.ui
@@ -125,7 +125,7 @@
      <x>0</x>
      <y>0</y>
      <width>429</width>
-     <height>23</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -134,8 +134,17 @@
     </property>
     <addaction name="actionOpen_Folder_From"/>
     <addaction name="actionOpen_Folder_To"/>
+    <addaction name="action_Exit"/>
+   </widget>
+   <widget class="QMenu" name="menu_Help">
+    <property name="title">
+     <string>&amp;Help</string>
+    </property>
+    <addaction name="action_About"/>
+    <addaction name="actionAbout_Qt"/>
    </widget>
    <addaction name="menu_File"/>
+   <addaction name="menu_Help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionOpen_Folder_From">
@@ -146,6 +155,21 @@
   <action name="actionOpen_Folder_To">
    <property name="text">
     <string>Open Folder &amp;To</string>
+   </property>
+  </action>
+  <action name="action_Exit">
+   <property name="text">
+    <string>&amp;Exit</string>
+   </property>
+  </action>
+  <action name="action_About">
+   <property name="text">
+    <string>&amp;About</string>
+   </property>
+  </action>
+  <action name="actionAbout_Qt">
+   <property name="text">
+    <string>About &amp;Qt</string>
    </property>
   </action>
  </widget>
